El usuario administrador ahora puede aprobar entidades reportadas desde los perfiles que visualiza. Se agregan strikes.

--- a/conectafreelance/src/app/componentes/comentario/list-comentario-admcontperf/list-comentario-admcontperf.component.html
+++ b/conectafreelance/src/app/componentes/comentario/list-comentario-admcontperf/list-comentario-admcontperf.component.html
@@ -76,7 +76,17 @@
               Eliminar
               <span class="action-label">Eliminar</span>
             </button>
+
+            @if(comentario.reportada){
+              <button
+                class="approve-button"
+                (click)="aprobar(comentario)"
+              >
+                Aprobar
+              </button>
+            }
           </div>
+
         }
       </article>
     }
