--- a/conectafreelance/src/app/componentes/comentario/list-comentario-admprofperf/list-comentario-admprofperf.component.html
+++ b/conectafreelance/src/app/componentes/comentario/list-comentario-admprofperf/list-comentario-admprofperf.component.html
@@ -64,6 +64,15 @@
                   Eliminar
                 </button>
 
+                @if(comentario.reportada){
+                  <button
+                    class="approve-button"
+                    (click)="aprobar(comentario)"
+                  >
+                    Aprobar
+                  </button>
+                }
+
 
               </div>
             </div>
