--- a/conectafreelance/src/app/componentes/usuario/usuarioContratador/crud-contratador/add-contratador/add-contratador.component.html
+++ b/conectafreelance/src/app/componentes/usuario/usuarioContratador/crud-contratador/add-contratador/add-contratador.component.html
@@ -14,7 +14,7 @@
         <div class="error">No se aceptan cadenas vacias</div>
       }
 
-      <label for="email">Email*</label>
+      <label for="email">Correo electrónico*</label>
       <input
         type="text"
         id="email"
