--- a/conectafreelance/src/app/componentes/usuario/usuarioProfesional/crud-profesional/add-profesional/add-profesional.component.html
+++ b/conectafreelance/src/app/componentes/usuario/usuarioProfesional/crud-profesional/add-profesional/add-profesional.component.html
@@ -79,7 +79,7 @@
 
       <label for="foto" class="form-control-label">
         <img [src]="imgSrc" alt="Foto actual" />
-        <div>Subir foto</div>
+        <div>Subir foto*</div>
       </label>
       <input type="file" class="form-control" id="foto" (change)="manejoDeArchivo($event)" accept="image/*">
 
