--- a/conectafreelance/src/app/componentes/comentario/list-comentario/list-comentario.component.html
+++ b/conectafreelance/src/app/componentes/comentario/list-comentario/list-comentario.component.html
@@ -23,9 +23,12 @@
           <div class="comentario-content">
             <p>{{ comentario.contenido }}</p>
           </div>
+
           <div class="comentario-actions">
+
+
             @if (!comentario.reportada) {
-              @if(!comentario.controlado){
+              @if(!comentario.controlado){  <!--El profesional no lo puede reportar si está controlado-->
                 <button
                   (click)="reportarComentario(comentario.id)"
                   class="report-button"
@@ -41,6 +44,7 @@
             }
           </div>
         </div>
+
       }
     }
   }
