--- a/conectafreelance/src/app/componentes/page-components/cuenta-desactivada-page/cuenta-desactivada-page.component.html
+++ b/conectafreelance/src/app/componentes/page-components/cuenta-desactivada-page/cuenta-desactivada-page.component.html
@@ -1,7 +1,7 @@
 <div class="account-disabled-container">
   <div class="content">
     <h1>Cuenta desactivada</h1>
-    <p>Lo sentimos, tu cuenta ha sido desactivada temporal o permanentemente.</p>
+    <p>Lo sentimos, tu cuenta ha sido desactivada temporal o permanentemente. Has realizado 3 o más publicaciones ó comentarios indebidos</p>
 
     <div class="icon">
       <svg width="100" height="100" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
@@ -10,5 +10,12 @@
     </div>
 
     <a routerLink="/home" class="btn-home" (click)="redireccion()">Volver al Inicio</a>
+
+    @if(rol === "profesional"){
+      <app-publicaciones-eliminadas> </app-publicaciones-eliminadas>
+    }@else{
+      <app-comentarios-eliminados></app-comentarios-eliminados>
+    }
+
   </div>
 </div>
