--- a/conectafreelance/src/app/componentes/usuario/usuarioContratador/crud-contratador/admin-contratador-perfil/admin-contratador-perfil.component.html
+++ b/conectafreelance/src/app/componentes/usuario/usuarioContratador/crud-contratador/admin-contratador-perfil/admin-contratador-perfil.component.html
@@ -7,13 +7,32 @@
         loading="lazy"
       />
     </div>
+
+
+
+
+
     <div class="profile-info">
       <h1>{{ usuarioCont.nombreCompleto || 'Nombre no disponible' }}</h1>
       <p class="role">{{ usuarioCont.rol || 'Rol no especificado' }}</p>
+
       @if (usuarioCont.empresaRepresentada) {
         <p class="company">Representa a: {{ usuarioCont.empresaRepresentada }}</p>
       }
+
+      @if (!usuarioCont.activo) {
+        <p class="activate-wrapper">
+          <button class="activate-button" (click)="activarCuentaContratadora()">
+            <span class="material-icons">check_circle</span>
+            Activar cuenta
+          </button>
+        </p>
+      }
     </div>
+
+
+
+
   </header>
 
   <section class="profile-details">
@@ -43,6 +62,14 @@
         >
           Comentarios
         </button>
+        <button
+          (click)="setActiveTab('comentEliminados')"
+          [class.active]="activeTab === 'comentEliminados'"
+          aria-label="Comentarios eliminados"
+          class="tab-button"
+        >
+          Comentarios eliminados
+        </button>
       </div>
 
       @if (activeTab === 'listaFav') {
@@ -50,9 +77,13 @@
           <app-list-favoritos-perfil-admin-cont></app-list-favoritos-perfil-admin-cont>
         </div>
       }
-      @if (activeTab === 'comentarios') {
+      @else if (activeTab === 'comentarios') {
         <div class="tab-content">
           <app-list-comentario-admcontperf> </app-list-comentario-admcontperf>
+        </div>
+      }@else {
+        <div class="tab-content">
+          <app-comentarios-eliminados></app-comentarios-eliminados>
         </div>
       }
     </section>
